[package]
name = "swap-arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ptr-ops = []

[profile.release]
debug = true

#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
# thread_local = "1.1.4"
# thread_local = { git = "https://github.com/terrarier2111/thread_local-rs", branch = "improve-safely" }
thread_local = { git = "https://github.com/terrarier2111/thread_local-rs", branch = "stable", features = ["nightly"] }
#thread_local = { git = "https://github.com/terrarier2111/thread_local-rs" }
# thread_local = { git = "https://github.com/Amanieu/thread_local-rs" }
crossbeam-utils = "0.8.12"
likely_stable = "0.1.2"
cfg-if = "1.0.0"
arc-swap = { version = "1.5.1", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand = "0.8.5"
arc-swap = "1.5.1"

[[bench]]
name = "swap_arc"
required-features = ["arc-swap", "rand"]
harness = false
