[package]
name = "swap-arc"
version = "0.1.0"
edition = "2021"
description = "A swappable Arc"
readme = "README.md"
repository = "https://github.com/terrarier2111/SwapArc"
license = "MIT OR Apache-2.0"
keywords = ["utility", "concurrency", "data-structure", "performance", "atomic"]
categories = ["Concurrency", "Data structures", "Memory management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ptr-ops = []

[dependencies]
thread_local = { git = "https://github.com/terrarier2111/thread_local-rs", branch = "stable", features = ["nightly"] }
crossbeam-utils = "0.8.14"
likely_stable = "0.1.2"
cfg-if = "1.0.0"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"
arc-swap = "1.5.1"

[[bench]]
name = "swap_arc"
required-features = ["arc-swap", "rand"]
harness = false
